objects/pse__Revenue_Forecast_Version_Detail__c.object
<CustomObject>
    <fields>
        <fullName>pse__Percent_Complete_Milestone_Recognized__c</fullName>
        <description>Amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the % Complete recognition method. Populated using data from Revenue Management, if you are using the integration.</description>
        <inlineHelpText>Amount of revenue that has already been recognized within the relevant time period for the Milestone revenue source, when using the % Complete recognition method. Populated using data from Revenue Management, if you are using the integration.</inlineHelpText>
        <label>% Complete: Milestone: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Milestone_Scheduled__c</fullName>
        <description>Amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>Amount of revenue that is scheduled for recognition within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>% Complete: Milestone: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Milestone_Unscheduled__c</fullName>
        <description>Amount of unscheduled revenue within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>Amount of unscheduled revenue within the relevant time period for the Milestone revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>% Complete: Milestone: Unscheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Project_Pending__c</fullName>
        <description>Amount of revenue that is ready for recognition within the relevant time period for the Project revenue source, when using the % Complete recognition method. Populated by the revenue forecast version batch Apex job.</description>
        <inlineHelpText>Amount of revenue that is ready for recognition within the relevant time period for the Project revenue source, when using the % Complete recognition method. Populated by the revenue forecast version batch Apex job.</inlineHelpText>
        <label>% Complete: Project: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Project_Recognized__c</fullName>
        <description>Amount of revenue that has already been recognized within the relevant time period for the Project revenue source, when using the % Complete recognition method. Populated using data from Revenue Management, if you are using the integration.</description>
        <inlineHelpText>Amount of revenue that has already been recognized within the relevant time period for the Project revenue source, when using the % Complete recognition method. Populated using data from Revenue Management, if you are using the integration.</inlineHelpText>
        <label>% Complete: Project: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Project_Scheduled__c</fullName>
        <description>Amount of revenue that is scheduled for recognition within the relevant time period for the Project revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>Amount of revenue that is scheduled for recognition within the relevant time period for the Project revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>% Complete: Project: Scheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Project_Unscheduled__c</fullName>
        <description>Amount of unscheduled revenue within the relevant time period for the Project revenue source, when using the % Complete recognition method.</description>
        <inlineHelpText>Amount of unscheduled revenue within the relevant time period for the Project revenue source, when using the % Complete recognition method.</inlineHelpText>
        <label>% Complete: Project: Unscheduled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the practice this revenue forecast version detail relates to.</description>
        <inlineHelpText>Lookup to the practice this revenue forecast version detail relates to.</inlineHelpText>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
        <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the project this revenue forecast version detail relates to.</description>
        <inlineHelpText>Lookup to the Project this revenue forecast version relates to.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
        <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the region this revenue forecast version detail relates to.</description>
        <inlineHelpText>Lookup to the region this revenue forecast version detail relates to.</inlineHelpText>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
        <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Revenue_Forecast_Version__c</fullName>
        <description>Lookup to the revenue forecast version this record relates to.</description>
        <inlineHelpText>Lookup to the revenue forecast version this record relates to.</inlineHelpText>
        <label>Revenue Forecast Version</label>
        <referenceTo>pse__Revenue_Forecast_Version__c</referenceTo>
        <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
        <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period_End__c</fullName>
        <description>End date of the time period this record relates to.</description>
        <inlineHelpText>End date of the time period this record relates to.</inlineHelpText>
        <label>Time Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period_Start__c</fullName>
        <description>Start date of the time period this record relates to.</description>
        <inlineHelpText>Start date of the time period this record relates to.</inlineHelpText>
        <label>Time Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the time period this revenue forecast version detail relates to.</description>
        <inlineHelpText>Lookup to the time period set on this revenue forecast version.</inlineHelpText>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Revenue Forecast Version Details</relationshipLabel>
        <relationshipName>Revenue_Forecast_Version_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Pending__c</fullName>
        <description>Amount of revenue that is ready for recognition within the relevant time period for the Timecard revenue source, when using the Deliverable recognition method. Populated by the revenue forecast version batch Apex job.</description>
        <inlineHelpText>Amount of revenue that is ready for recognition within the relevant time period for the Timecard revenue source, when using the Deliverable recognition method. Populated by the revenue forecast version batch Apex job.</inlineHelpText>
        <label>Deliverable: Timecard: Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Recognized__c</fullName>
        <description>Amount of revenue that has already been recognized within the relevant time period for the Timecard revenue source, when using the Deliverable recognition method. Populated using data from Revenue Management, if you are using the integration.</description>
        <inlineHelpText>Amount of revenue that has already been recognized within the relevant time period for the Timecard revenue source, when using the Deliverable recognition method. Populated using data from Revenue Management, if you are using the integration.</inlineHelpText>
        <label>Deliverable: Timecard: Recognized</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Revenue Forecast Version Detail</label>
    <nameField>
        <displayFormat>RFVD-{000000}</displayFormat>
        <label>Revenue Forecast Version Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Version Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>